--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.9",
     "gulp": "^4.0.2",
     "gulp-inline": "^0.1.3",
+    "matrix-inverse": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
