--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
-    "gulp": "^4.0.2",
-    "gulp-inline": "^0.1.3",
+    "@nrwl/angular": "^15.0.4",
     "matrix-inverse": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
