--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "docs",
+            "baseHref": "/badukGuessr/",
             "index": {
               "input": "src/index.html",
               "output": "404.html"
