--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "baduk-guesser:build"
+            "browserTarget": "baduk-guesser:build",
+            "baseHref": "/"
           },
           "configurations": {
             "production": {
