Now using Font Awesome for back and forward buttons and 1 checkmark - close #12 .

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "matrix-inverse": "^2.0.0",
     "protractor": "^7.0.0",
     "rxjs": "~7.5.0",
