Added ng-bootstrap support.

--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
+    "@angular/animations": "^14.2.10",
     "@angular/cdk": "^14.2.6",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/common": "^14.2.10",
+    "@angular/compiler": "^14.2.10",
+    "@angular/core": "^14.2.10",
+    "@angular/forms": "^14.2.10",
+    "@angular/platform-browser": "^14.2.10",
+    "@angular/platform-browser-dynamic": "^14.2.10",
+    "@angular/router": "^14.2.10",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.0",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.2.0",
     "matrix-inverse": "^2.0.0",
     "ngx-cookie-service": "^14.0.1",
     "ngx-device-detector": "^4.0.1",
@@ -33,7 +36,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.7",
     "@angular/cli": "~14.2.7",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular/compiler-cli": "^14.2.10",
+    "@angular/localize": "^14.2.10",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
